@@ -1,0 +1,4 @@
+#!/usr/bin/make -f
+
+%:
+	dh --with python2 --buildsystem=python_distutils $@
